--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,17 +17,26 @@
   },
   "homepage": "https://github.com/Malekalarmash/Backend-project-DigitalCrafts#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.0-alpha1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
     "sequelize": "^6.29.3",
-    "sqlite3": "^5.1.5",
+    "sqlite3": "^5.1.6",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "sequelize-cli": "^6.6.0"
   }
 }
