--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/Malekalarmash/Backend-project-DigitalCrafts#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.292.0",
+    "aws-sdk": "^2.1336.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
