removing the .env

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 SESSION_SECRET= secret
 USERNAME = "postgres"
 PASSWORD = "postgres"
-HOSTNAME = "starbuzz-coffee-instance-1.cshcodouimqv.us-east-2.rds.amazonaws.com"
-DATABASE = "starbuzzcoffee1"
+HOSTNAME = "localhost"
+DATABASE = "database_development"
+USERNAME1 = "postgres"
+PASSWORD1 = "postgres"
+HOSTNAME1 = "starbuzzcoffee.cshcodouimqv.us-east-2.rds.amazonaws.com"
+DATABASE1 = "starbuzzcoffee"
